Fix CI only release when a new tag v1.x is pushed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: goreleaser
 
 on:
-  pull_request:
   push:
+    # Sequence of patterns matched against refs/tags
+    tags:        
+      - v1             # Push events to v1 tag
+      - v1.*  
 
 jobs:
   goreleaser:
