--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
       -
         name: Set up Go
         uses: actions/setup-go@master
+        with:
+          go-version: '1.13.5'
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
