--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,7 @@
 # Build customization
 before:
   hooks:
-  - go get -u ./...
+  - go test ./...
 builds:
   - main: cmd/jwbcli/main.go
     binary: jwbcli
@@ -15,6 +15,7 @@ builds:
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     replacements:
+    
       darwin: Darwin
       linux: Linux
       windows: Windows
